fix missing padding fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,13 @@ body {
 }
 
 h1 {
-	margin-top: 50px;
+	color: $highlight;
+	margin-top: 1.5em;
+    background: $neutral;  /* base01 */
+    color: $bg;  /* base03 */
+    font-weight: 700;
+    padding: 0.25em .5em;
+	margin-left: -.5em;
 }
 
 .category {
@@ -129,12 +135,6 @@ hr {
 	}
 }
 
-h1 {
-	color: $highlight;
-	padding: 0;
-	margin-top: 1.5em;
-	background: none;
-}
 
 ul.h2 {
     font-weight: 200;
@@ -147,13 +147,6 @@ ul.h2 {
     }
 }
 
-h1 {
-    background: $neutral;  /* base01 */
-    color: $bg;  /* base03 */
-    font-weight: 700;
-    margin-top: 2.25em;
-    padding: 0.25em;
-}
 
 h2 {
     color: $highlight;
